; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_StartMessage.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_StartMessage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@menuactive = common dso_local global i32 0, align 4
@messageLastMenuActive = common dso_local global i32 0, align 4
@messageToPrint = common dso_local global i32 0, align 4
@messageString = common dso_local global i8* null, align 8
@messageRoutine = common dso_local global i8* null, align 8
@messageNeedsInput = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_StartMessage(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @menuactive, align 4
  store i32 %7, i32* @messageLastMenuActive, align 4
  store i32 1, i32* @messageToPrint, align 4
  %8 = load i8*, i8** %4, align 8
  store i8* %8, i8** @messageString, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** @messageRoutine, align 8
  %10 = load i32, i32* %6, align 4
  store i32 %10, i32* @messageNeedsInput, align 4
  store i32 1, i32* @menuactive, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
